--- a/src/components/navbar/index.module.css
+++ b/src/components/navbar/index.module.css
@@ -36,7 +36,7 @@
     flex-direction: column;
     font-weight: var(--font-medium);
     transition: .3s;
-    color: var(--wine-color);
+    color: dodgerblue;
 }
 
 .nav__icon,
@@ -47,7 +47,7 @@
 
 .active_link,
 .nav__link:hover {
-    color: #8B0000;
+    color: dodgerblue;
 }
 
 .scrollHeader {
