--- a/src/pages/home/index.module.css
+++ b/src/pages/home/index.module.css
@@ -35,7 +35,7 @@
     padding-left: 5.4rem;
     font-weight: var(--font-normal);
     margin-bottom: var(--mb-1);
-    color: var(--wine-color);
+    color: dodgerblue;
 }
 
 .home__subtitle::before{
@@ -65,7 +65,7 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    box-shadow: inset 0 0 0 9px rgba(128, 0, 32, 0.3);
+    box-shadow: inset 0 0 0 6px rgba(40, 140, 255, 0.7);
     order: 1;
     justify-self: center;
     width: 300px;
@@ -73,17 +73,17 @@
     animation: profile__animation 8s ease-in-out infinite 1s;
 }
 
-@keyframes profile__animation {
-    0%{
-        border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
-    }
-    50%{
-        border-radius: 30% 60% 70% 40%/50% 60% 30% 60%;
-    }
-    100%{
-        border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
-    }
-}
+/*@keyframes profile__animation {*/
+/*    0%{*/
+/*        border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;*/
+/*    }*/
+/*    50%{*/
+/*        border-radius: 30% 60% 70% 40%/50% 60% 30% 60%;*/
+/*    }*/
+/*    100%{*/
+/*        border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;*/
+/*    }*/
+/*}*/
 
 .home__scroll{
     margin-left: 14.25rem;
