corrections on profile

--- a/src/components/navbar/index.module.css
+++ b/src/components/navbar/index.module.css
@@ -100,7 +100,7 @@
         right: 1.3rem;
         top: 1rem;
         font-size: 2rem;
-        color: #ed2b27;
+        color: dodgerblue;
         cursor: pointer;
     }
 
